added support for probe trials

--- a/config_files/example.config
+++ b/config_files/example.config
@@ -2,5 +2,7 @@
 birdname=test
 stimset_0=exa1_motif_stimset_a
 stimset_1=exa1_motif_stimset_b_2
-mode = discrimination
+stimset_2=exa1_song_a_decomp_probes
+mode = probes
+trial_generator = probes
 box = box_1
