--- a/config_files/example.config
+++ b/config_files/example.config
@@ -3,7 +3,7 @@ birdname=test
 stimset_0=exa1_motif_stimset_a
 stimset_1=exa1_motif_stimset_b_2
 stimset_2=exa1_song_a_decomp_probes
-mode = probes
+mode = sequence
 trial_generator = probes
 box = box_1
 
