--- a/config_files/example.config
+++ b/config_files/example.config
@@ -3,9 +3,14 @@ birdname=test
 stimset_0=exa1_motif_stimset_a
 stimset_1=exa1_motif_stimset_b_2
 #stimset_2=exa1_song_a_decomp_probes
-mode = sequence
+mode = discrimination
 trial_generator = standard
 box = box_1
+withold_response = True
+timeout_period = 60
+max_trial_time = 5
+feed_time = 5
+
 
 
 
