made timeout time depend on song length when response is witheld

--- a/config_files/example.config
+++ b/config_files/example.config
@@ -5,8 +5,8 @@ stimset_1=exa1_motif_stimset_b_2
 #stimset_2=exa1_song_a_decomp_probes
 mode = discrimination
 trial_generator = standard
-box = box_1
-withold_response = True
+box = box_2
+withold_response = False
 timeout_period = 60
 max_trial_time = 5
 feed_time = 5
