added example control of stimuli and data dir

--- a/config_files/example.config
+++ b/config_files/example.config
@@ -1,4 +1,6 @@
 [run_params]
+#data_dir = /home/jknowles/Desktop/
+#stimuli_dir = /home/jknowles/Desktop/
 birdname=test
 stimset_0=exa1_motif_stimset_a
 stimset_1=exa1_motif_stimset_b_2
