added support for laser

--- a/config_files/example.config
+++ b/config_files/example.config
@@ -6,7 +6,7 @@ stimset_0=exa1_motif_stimset_a
 stimset_1=exa1_motif_stimset_b_2
 #stimset_2=exa1_song_a_decomp_probes
 mode = discrimination
-trial_generator = standard
+trial_generator = standard_laser
 box = box_1
 timeout_light = True
 withold_response = True
