--- a/config_files/example.config
+++ b/config_files/example.config
@@ -6,10 +6,10 @@ stimset_0=exa1_motif_stimset_a
 stimset_1=exa1_motif_stimset_b_2
 #stimset_2=exa1_song_a_decomp_probes
 mode = discrimination
-trial_generator = standard_laser
+trial_generator = standard
 box = box_1
 timeout_light = True
-withold_response = True
+withold_response = False
 timeout_period = 30
 max_trial_time = 5
 feed_time = 5
