stuff satoshi changed

--- a/config_files/playback_example.config
+++ b/config_files/playback_example.config
@@ -1,17 +1,17 @@
 [run_params]
-birdname=test
+birdname=sk_test
 mode = playback_and_count
-stimset_0 = exa2_stimset_a
-stimset_1 = exa2_stimset_b
-stimset_2 = exa1_motif_stimset_a
-probe_occurance = 10
+stimset_0 = SK_test_originalsong
+stimset_1 = SK_test_modified
+stimset_2 = SK_silence
+probe_occurance = 0
 data_dir = /home/doupelab/data/behavior/
 stimuli_dir = /home/doupelab/data/stimuli/
 box = box_3
 trial_generator = playback
-stimet_occurance = [0.5 0.5]
-delay_time = 5   
-feed_time = 5
-isi_parameter = 10
+stimset_occurance = [0.9, 0.1]
+delay_time = 2   
+feed_time = 8
+isi_parameter = 20
 isi_disribution = exponential
 
