--- a/config_files/playback_example.config
+++ b/config_files/playback_example.config
@@ -1,13 +1,13 @@
 [run_params]
 birdname=sk_test
 mode = playback_and_count
-stimset_0 = SK_test_originalsong
-stimset_1 = SK_test_modified
-stimset_2 = SK_silence
+stimset_0 = exa1_motif_stimset_a
+stimset_1 = exa1_motif_stimset_b_6
+stimset_2 = exa1_decomposition_probes_v2
 probe_occurance = 0
-data_dir = /home/doupelab/data/behavior/
-stimuli_dir = /home/doupelab/data/stimuli/
-box = box_3
+data_dir = /home/skojima/data/behavior/
+stimuli_dir = /home/skojima/data/stimuli/
+box = box_1
 trial_generator = playback
 stimset_occurance = [0.9, 0.1]
 delay_time = 2   
