--- a/config_files/bone.config
+++ b/config_files/bone.config
@@ -1,6 +1,6 @@
 [run_params]
-data_dir = /home/doupelab/data/behavior/
-stimuli_dir = /home/doupelab/data/stimuli/
+data_dir = /root/data/behavior/
+stimuli_dir = /root/data/stimuli/
 birdname=test
 stimset_0=exa1_motif_stimset_a
 stimset_1=exa1_motif_stimset_b_2
