initial commit for brad branch

--- a/config_files/playback_example.config
+++ b/config_files/playback_example.config
@@ -5,8 +5,8 @@ stimset_0 = exa1_motif_stimset_a
 stimset_1 = exa1_motif_stimset_b_6
 stimset_2 = exa1_decomposition_probes_v2
 probe_occurance = 0
-data_dir = /home/skojima/data/behavior/
-stimuli_dir = /home/skojima/data/stimuli/
+#data_dir = /home/skojima/data/behavior/
+#stimuli_dir = /home/skojima/data/stimuli/
 box = box_1
 trial_generator = playback
 stimset_occurance = [0.9, 0.1]
