small changes to lib/audiorecord.py

--- a/config_files/playback_test1.config
+++ b/config_files/playback_test1.config
@@ -6,8 +6,8 @@ stimset_0 = exa1_motif_stimset_b_30
 stimset_1 = exa1_motif_stimset_b_30
 #stimset_2 = exa1_decomposition_probes_v2
 probe_occurance = 0
-data_dir = /home/brad/src/behavior_controller/
-stimuli_dir = /home/brad/src/behavior_controller/
+data_dir = /home/brainard/src/behavior_controller/
+stimuli_dir = /home/brainard/src/behavior_controller/
 box = box_1
 trial_generator = playback
 stimset_occurance = [0.9, 0.1]
@@ -21,4 +21,4 @@ sound_card = "usbaudio_1"
 silence_limit = 0.5
 prev_audio = 1
 min_dur = 1
-outdir = "."
+outdir = .
