added sleep() to main_loop to reduce CPU usgae

--- a/config_files/playback_test1.config
+++ b/config_files/playback_test1.config
@@ -18,6 +18,7 @@ isi_disribution = exponential
 
 [record_params]
 sound_card = "usbaudio_1"
+chunk = 1024
 silence_limit = 0.5
 prev_audio = 1
 min_dur = 1
