--- a/config_files/playback_test1.config
+++ b/config_files/playback_test1.config
@@ -3,18 +3,13 @@ birdname=sk_test
 mode = song_only
 arduino_model=nano328
 stimset_0 = exa1_motif_stimset_b_30
-stimset_1 = exa1_motif_stimset_b_30
-#stimset_2 = exa1_decomposition_probes_v2
-probe_occurance = 0
+#stimset_1 = exa1_motif_stimset_b_30
 data_dir = /home/brainard/src/behavior_controller/
 stimuli_dir = /home/brainard/src/behavior_controller/
 box = box_1
-trial_generator = playback
-stimset_occurance = [0.9, 0.1]
-delay_time = 2   
-feed_time = 8
-isi_parameter = 20
-isi_disribution = exponential
+set_times = [7, 12, 16]
+allowed_songs_per_session = 10
+timeout_period = 30
 
 [record_params]
 sound_card = "usbaudio_1"
