added single_playback in trial_generators. debugged session info

--- a/config_files/playback_test1.config
+++ b/config_files/playback_test1.config
@@ -4,12 +4,13 @@ mode = song_only
 arduino_model=nano328
 stimset_0 = exa1_motif_stimset_b_30
 #stimset_1 = exa1_motif_stimset_b_30
+trial_generator = single_playback
 data_dir = /home/brainard/src/behavior_controller/
 stimuli_dir = /home/brainard/src/behavior_controller/
 box = box_1
-set_times = [7, 12, 16]
-allowed_songs_per_session = 10
-timeout_period = 30
+set_times = [7, 12, 17]
+allowed_songs_per_session = 2
+timeout_period = 2
 
 [record_params]
 sound_card = "usbaudio_1"
