wrote test_arduino.py to test trigger connection independently of sound

--- a/config_files/playback_test1.config
+++ b/config_files/playback_test1.config
@@ -1,11 +1,11 @@
 [run_params]
-birdname=sk_test
+birdname=sk_test1
 mode = song_only
 arduino_model=nano328
 stimset_0 = exa1_motif_stimset_b_30
 #stimset_1 = exa1_motif_stimset_b_30
 trial_generator = single_playback
-data_dir = /home/brainard/src/behavior_controller/
+data_dir = /home/brainard/data
 stimuli_dir = /home/brainard/src/behavior_controller/
 box = box_1
 set_times = [7, 12, 17]
@@ -13,7 +13,7 @@ allowed_songs_per_session = 2
 timeout_period = 2
 
 [record_params]
-sound_card = "usbaudio_1"
+sound_card = "PCH"
 chunk = 1024
 silence_limit = 0.5
 prev_audio = 1
