--- a/config_files/playback_test1.config
+++ b/config_files/playback_test1.config
@@ -1,6 +1,6 @@
 [run_params]
 birdname=sk_test1
-mode = song_only
+mode = tutoring
 arduino_model=nano328
 stimset_0 = exa1_motif_stimset_b_30
 #stimset_1 = exa1_motif_stimset_b_30
@@ -8,14 +8,17 @@ trial_generator = single_playback
 data_dir = /home/brainard/data
 stimuli_dir = /home/brainard/src/behavior_controller/
 box = box_1
-set_times = [7, 12, 17]
-allowed_songs_per_session = 2
+#set_times = [7, 12, 17]
+set_times = [14]
+allowed_songs_per_session = 10
 timeout_period = 2
 
 [record_params]
-sound_card = "PCH"
-chunk = 1024
+#birdname=sk_test1
+sound_card = "usbaudio_1"
+chunk = 1024 
+threshold = 6000
 silence_limit = 0.5
 prev_audio = 1
 min_dur = 1
-outdir = .
+#outdir = .
