added protection for no fps in movie file read

--- a/config_files/pref_test_videoplayback.config
+++ b/config_files/pref_test_videoplayback.config
@@ -5,7 +5,7 @@ birdname=test
 stimset_0=bsp_expanded_stimset_v1
 #stimset_1=bsp_10p5_ss_stimset
 #stimset_2=exa1_song_a_decomp_probes
-mode = interleaved_video_preference_assay
+mode = interleaved_video_preference_assay_videoplayback
 trial_generator = interleaved_video_preference
 timeout_light = True
 withold_response = False
@@ -16,4 +16,4 @@ camera_plot = True
 feed_time = 5
 camera_bounds = [250, 400]
 video_playback = True
-
+arduino_port = /dev/arduino_1
