--- a/config_files/pref_test_videoplayback.config
+++ b/config_files/pref_test_videoplayback.config
@@ -17,3 +17,5 @@ feed_time = 5
 camera_bounds = [250, 400]
 video_playback = True
 arduino_port = /dev/arduino_1
+arduino_model = nano328
+exclusion_zones = [[[120,340], [160,310], [160,240],[120,240]], [[480,310], [520,340], [520,240],[480,240]]]
