--- a/config_files/pref_test_video_audiorecord.config
+++ b/config_files/pref_test_video_audiorecord.config
@@ -9,11 +9,11 @@ mode = interleaved_video_preference_assay
 trial_generator = interleaved_video_preference
 timeout_light = True
 withold_response = False
-timeout_period = 30
+timeout_period = 5
 max_trial_time = 5
 camera_idx = 0
 camera_plot = True
-feed_time = 5
+#feed_time = 5
 camera_bounds = [250, 400]
 
 [record_params]
@@ -21,7 +21,7 @@ record_audio = 1
 soundcard = 1
 outdir = /home/jknowles/data/ardata/
 threshold = 25000
-silence_limit = 1
+silence_limit = 2
 min_dur = 0.1
 max_dur = 10
 rate = 44100
