--- a/config_files/pref_test_video_audiorecord.config
+++ b/config_files/pref_test_video_audiorecord.config
@@ -17,10 +17,9 @@ camera_plot = True
 camera_bounds = [250, 400]
 
 [record_params]
-record_audio = 1
-soundcard = 1
-outdir = /home/jknowles/data/ardata/
-threshold = 25000
+record_audio = True
+soundcard = 0
+threshold = 20000
 silence_limit = 2
 min_dur = 0.1
 max_dur = 10
