sofia added params to config parsing

--- a/config_files/pref_test_video_audiorecord.config
+++ b/config_files/pref_test_video_audiorecord.config
@@ -1,8 +1,8 @@
 [run_params]
-data_dir = /home/jknowles/data/doupe_lab/behavior/
-stimuli_dir = /home/jknowles/data/doupe_lab/stimuli/
+data_dir = /home/sofia/data/behavior
+stimuli_dir = /home/sofia/data/SL_stim_songs/generated_stims/
 birdname=test
-stimset_0=bsp_expanded_stimset_v1
+stimset_0=bsp_g4bu94_v2_stimset
 #stimset_1=bsp_10p5_ss_stimset
 #stimset_2=exa1_song_a_decomp_probes
 mode = interleaved_video_preference_assay
@@ -11,14 +11,18 @@ timeout_light = True
 withold_response = False
 timeout_period = 5
 max_trial_time = 5
-camera_idx = 3
+camera_idx = 0
 camera_plot = True
 #feed_time = 5
 camera_bounds = [250, 400]
+center_bin_time = 5
+interstimulus_interval = 10
+nplaybacks_per_side = 2
+intertrial_interval = 10
 
 [record_params]
 record_audio = True
-soundcard = 0
+soundcard = 2
 threshold = 10000
 silence_limit = 0.5
 min_dur = 1
