audiorecording should be fixed. there were issues with both n channels and the sample width

--- a/config_files/audiorecord_bare.config
+++ b/config_files/audiorecord_bare.config
@@ -5,9 +5,9 @@ birdname=test
 
 [record_params]
 record_audio = True
-soundcard = 2
-threshold = 20000
+soundcard = 3
+threshold = 10000
 silence_limit = 0.5
-min_dur = 1
+min_dur = .5
 max_dur = 10
 rate = 44100
